fix lens align

--- a/Client/e-commerce/src/index.css
+++ b/Client/e-commerce/src/index.css
@@ -608,14 +608,14 @@ form {
   top: 0;
   left: 0;
   width: 130px;
-  height: 130px;
+  height: 118px;
   background-color: rgba(0, 0, 0, .4);
   border: 2px solid var(--green-dark);
   display: none;
 }
 
 .magnifier-lens.active {
-  display: flex;
+  display: block;
 }
 
 .magnified-img {
@@ -624,13 +624,15 @@ form {
   height: 65%;
   background-color: rgba(0, 0, 0, .2);
   display: none;
-  /* opacity: 0;
-  transform: scale(0.5);
-  transition: transform .5s; */
+  box-shadow: 6px 6px 6px rgba(0, 0, 0, .5);
 }
 
 .magnified-img.active {
-  /* opacity: 1;
-  transform: scale(1); */
   display: block;
 }
+  
+  .lens-container{
+    overflow: hidden;
+    align-self: center;
+  
+  }
